public/style.css
html,
body,
#root {
  height: 100%;
}

body{
  font-size:0.5wh;
}

h1,h2,h3,h4{
  font-family: 'Open Sans Condensed', sans-serif;
  text-align: center;
}

p{
  text-align: justify;
}

.App {
  text-align: center;
}

#main-logo {
  width: 80%;
}

.shadow-down {
  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 10px -5px;
}

.shadow-up {
  box-shadow: rgba(0, 0, 0, 0.2) 0px -10px 10px -5px;
}



.header{
  height:25%;
  display: flex;
  justify-content: center;
  align-items: stretch;
}

.header object{
  height:100%;
}

.floatContainer{
  width:100%;
  overflow: hidden;
}

.floating{
  position: absolute;
  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 12px 0px;
  z-index: -1;
  width: 200px;
}

.background {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 0;
}

.container {
  position: relative;
  width: 100%;
  z-index: 3;
  margin: auto;
}

.menu {
  width: 30%;
}

.card {
  padding: 2rem 0 2rem 0;
  border-bottom: 0.3rem solid transparent;
  transition: border-bottom 0.5s;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.card h4 {
  margin: 0;
}
.card:hover {
  border-bottom: 0.3rem solid #1d7ca7;
}
.card img {
  width: 40%;
}

.horizontal-spaced {
  display: flex;
  justify-content: space-around;
}

.vertical-spaced {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  height: 100%;
}

.panel {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.blue {
  background-image:linear-gradient(to top left, #1d7ca7 , #1f739a);
}

a {
  color: inherit; /* blue colors for links too */
  text-decoration: inherit; /* no underline */
}

#panel2 {
  color: white;
}
.bigScreen{
  display:None;
}

hr{
  border:2px dashed white;
  border-radius: 10px;
}

/* Larger than mobile screen */
@media (min-width: 40rem) {
  body{
    font-size:16px;
  }
  #main-logo {
    width: 70%;
  }
  .container {
    width: 70%;
  }
  .menu {
    width: 70%;
  }
  .card img {
    width: 30%;
  }
  .leftBack{
    left:15vh;
  }
  
  .rightBack{
    right:15vh;
  }
  .bigScreen{
    display:inline;
  }
}

/* Larger than tablet screen */
@media (min-width: 80rem) {
  #main-logo {
    width: 50%;
  }
  .container {
    width: 50%;
  }
  .menu {
    width: 50%;
  }
  .card img {
    width: 25%;
  }
}

/* Larger than desktop screen */
@media (min-width: 120rem) {
  #main-logo {
    width: 40%;
  }
  .container {
    width: 60%;
  }
  .menu {
    width: 60%;
  }
  .card img {
    width: 10%;
  }
}

